--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "8000:8000"
     volumes:
       - ../src:/app/src
+      - ../.venv/:/app/.venv:rw
     depends_on:
       - mongo
 
